# derivative

./: .gitignore  .readthedocs.yaml  Derivatives_Review.ipynb  README.md  README.rst  differentiation.py  pyproject.toml
.github/workflows/: pull-docs.yml  push-test.yml  release.yml
asv_bench/benchmarks/: finite_difference_1D.py
derivative/: __init__.py  __version__.py  dglobal.py  differentiation.py  dlocal.py  utils.py
docs/: api.rst  conf.py  index.rst  license.rst  modules.rst
docs/notebooks/: Derivatives_Review.ipynb  Examples.ipynb
prime/: __init__.py  dglobal.py  differentiation.py  dlocal.py  utils.py
primelab/: __init__.py  __version__.py  dglobal.py  differentiation.py  dlocal.py  utils.py
tests/: test_derivative.py  test_examples.py  test_interface.py  test_sub.py  test_utils.py
