[tool.poetry]
name = "derivative"
version = "0.6.0"
description = "Numerical differentiation in python."
repository = "https://github.com/andgoldschmidt/derivative"
documentation = "https://derivative.readthedocs.io/"
keywords = ["differentiation", "derivative", "gradient", "prime"]
authors = [
    "Andy Goldschmidt <andygold@uchicago.edu>",
    "Markus Quade <info@markusqua.de>",
    "Jacob Stevens-Haas <jmsh@uw.edu>"
]
license = "MIT"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
scipy = "^1.4.1"
scikit-learn = "^1"

# docs
sphinx = {version = "^4.5", optional = true}
nbsphinx = {version = "^0.6.1", optional = true}
ipykernel = {version = "^5.2.1", optional = true}
jupyter_client = {version = "^6.1.3", optional = true}
sphinx_rtd_theme = {version = "^1", optional = true}
matplotlib = {version = "^3.2.1", optional = true}
#pandoc = {version = "^2.2", optional = true}

# dev
pytest = {version = "^7", optional = true}

[tool.poetry.extras]
docs = ["sphinx", "nbsphinx", "ipykernel", "jupyter_client", "sphinx_rtd_theme", "matplotlib", "pandoc"]
dev = ["pytest"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
